# CPP_bsod_trojan

./: CMakeLists.txt  README.md
resources/: app.rc
src/: bsod.cpp
